Toolbar alignment options - issue 50

--- a/src/themes/delicious/css/toolbar.css
+++ b/src/themes/delicious/css/toolbar.css
@@ -219,4 +219,25 @@ li.jxToolItem  span.jxBarSeparator {
   /* Base setup */
   clear: both;
 }
+/* Aligning options */
+.jxToolbarAlignLeft ul {
+    float: left;
+}
 
+.jxToolbarAlignRight ul {
+    float: right;
+}
+
+.jxToolbarAlignCenter {
+    text-align: center;
+}
+
+.jxToolbarAlignCenter ul {
+    float: none;
+}
+
+
+.jxToolbarAlignCenter ul li {
+    float: none;
+    display: inline;
+}
